# packeteer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build_cli.py  cli.py  packet_lab.py  parse_cli.py  pyproject.toml  replacer.py  requirements.txt  ruff.toml  stream.ini.template  tcp_stream_plan.md
.github/workflows/: ci.yml
docs/: Makefile  build.md  cli.md  conf.py  fragmentation.md  index.md  installation.md  json-config.md  overview.md  parse.md  quickstart.md  requirements.txt  sanitiser.md  stream.md
docs/api/: fragmentation.md  fuzzer.md  header-dataclasses.md  index.md  packet-builder.md  parser.md  pcap-io.md  sanitiser.md  stream-encap.md  stream-generators.md
docs/cli/: build.md  file-info.md  fuzz.md  index.md  parse.md  sanitise.md  stream.md
docs/guide/: fuzzing.md  generating.md  index.md  parsing.md  pcap.md  sanitising.md  summarising.md
docs/internals/: architecture.md  atheris.md  encapsulation.md  fuzzer.md  index.md  packet-builder.md  parser-pipeline.md  sanitiser.md  stream-generators.md
docs/introduction/: index.md  installation.md  overview.md
docs/json-config/: format.md  index.md  python-api.md
docs/packet-spec/: format.md  index.md  python-api.md
docs/parse/: cli.md  index.md  python-api.md
docs/reference/: index.md  packet-sizes.md  rfc-references.md
docs/sanitiser/: cli.md  index.md  python-api.md
docs/stream/: cli.md  index.md  python-api.md
docs/synthetic/: index.md
packet_generator/: __init__.py  builder.py  checksum.py  etherip.py  ethernet.py  icmp.py  icmpv6.py  ip.py  ipv6.py  mpls.py  pcap.py  pppoe.py  tcp.py  udp.py
packet_parser/: __init__.py  ethernet.py  icmp.py  ip.py  mpls.py  parser.py  pcap.py  to_config.py
src/: packeteer_cli.py  replacer.py
src/packet_generator/: __init__.py  builder.py  fragmentation.py  gre.py  pcap.py  sctp_stream.py  stream.ini.template  stream_encap.py  tcp.py  tcp_stream.py  udp.py  udp_stream.py
src/packet_parser/: etherip.py  gre.py  icmp.py  icmpv6.py  parser.py  pcap.py  pppoe.py  sctp.py  tcp.py  to_config.py  udp.py  vlan.py
src/packeteer/: __main__.py  filter.py  fuzz.py  pcap.py  sanitise.py
src/tests/: test_arp.py  test_builder.py  test_checksum.py  test_cli.py  test_dhcp.py  (+49 more)
tests/: test_builder.py  test_etherip.py  test_ethernet.py  test_fragmentation.py  test_generator_ethernet.py  test_generator_pcap.py  test_generator_pcapng.py  test_generator_tcp.py  test_generator_udp.py  test_gre.py  test_icmp.py  test_icmpv6.py  test_ip.py  test_ipip.py  test_ipv6.py  test_parser_ethernet.py  test_parser_icmp.py  test_parser_ip.py  test_parser_parser.py  test_parser_pcap.py  test_parser_pcapng.py  test_parser_tcp.py  test_parser_to_config.py  test_pcap.py  test_pppoe.py  test_tcp.py
(+90 files in other folders)
