[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "packeteer"
version = "0.1.0"
requires-python = ">=3.10"
description = "Pure-Python library for building, parsing, and sanitising raw network packets"
authors = [ { name = "Adam Jonsson", email = "adam.jonsson@live.se"} ]
readme = "README.md"
classifiers = [ 
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Network Analysis",
    "Programming Language :: Python :: 3.10" ]

[tool.setuptools]
py-modules = ["packet_lab"]

[tool.setuptools.packages.find]
where = ["."]
include = ["packet_generator*", "packet_parser*"]

[project.scripts]
packeteer = "packet_lab:main"

[project.urls]
Repository = "https://github.com/adamkjonsson/packeteer.git"