[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "packeteer"
version = "0.2.0"
requires-python = ">=3.10"
description = "Pure-Python library for building, parsing, and sanitising raw network packets"
authors = [ { name = "Adam Jonsson", email = "adam.jonsson@live.se"} ]
readme = "README.md"
classifiers = [ 
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Network Analysis",
    "Programming Language :: Python :: 3.10" ]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["packeteer*"]

[tool.setuptools.package-data]
"packeteer.generate" = ["default_payload.txt", "stream.ini.template"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[project.scripts]
packeteer = "packeteer.__main__:main"

[project.urls]
Repository = "https://github.com/adamkjonsson/packeteer.git"